--- a/build
+++ b/build
@@ -1,7 +1,7 @@
 #!/bin/bash
 echo "Hello World"
 
-export COMMON_OPTION="-Wall -O -fstrength-reduce -fomit-frame-pointer -finline-functions -nostdinc -fno-builtin -I./include -c"
+export COMMON_OPTION="-fno-pie -m32 -Wall -O -fstrength-reduce -fomit-frame-pointer -finline-functions -nostdinc -fno-builtin -I./include -c"
 
 echo "Compiling Start.asm"
 nasm -f elf32 -o start.o start.asm
